Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-02-12 (SVN):
    * d_polyse.c: Fixed the long-standing bug of EF_SPECIAL_TRANS models
      being drawn with incorrect transparency when compiled without the
      x86 assembler routines: D_PolysetDrawSpans8T5() shouldn't refer to
      acolormap, fixed thusly.

2012-02-12 (SVN):
    * windows mouse: Disabled windows gdi mouse acceleration for better
      operation on winxp and newer. players can change their sensitivity
      setting if necessary.

2012-02-12 (SVN):
    * windows mouse: Made in_win.c:dinput_init variable public. Removed
      the IN_RestoreMouse helper and added explicit dinput_init checks
      in gl_vidnt.c, vid_win.c and vid_mgl4.c with additional comments.

2012-02-11 (SVN):
    * screen.c, gl_screen.c: Revert parts of rev.4530 which changed the
      loading plaque drawing and the scr_drawloading global, because of
      an unexpected weirdness with ATI linux open source drivers. Minor
      tidying up.

2012-02-11 (SVN):
    * revert previous r.4531, block unnecessary redraws of the progress
      bars earlier in D_ShowLoadingSize().
    * screen.c, gl_screen.c: only draw the progress bars when they have
      changed.

2012-02-11 (SVN):
    * screen.c, gl_screen.c: Tweaked SCR_DrawLoading to draw the loading
      plaque only when necessary, i.e. once only after SCR_UpdateScreen
      is called. Changed scr_drawloading from a boolean to int, so that
      it can be used to store the need for drawing the loading plaque as
      well as the truth value of loading screen being in effect by using
      bit flags. Skip the Draw_Fill() calls when there is no progress to
      draw, i.e. when count is 0.

2012-02-11 (SVN):
    * in_sdl.c: Fixed Mac OS X console and message mode backspace key
      (bug #2688151)

2012-02-10 (SVN):
    * Updated the features document after the recent fov enhancements.

2012-02-10 (SVN):